--- a/main.css
+++ b/main.css
@@ -1,11 +1,12 @@
 .tile {
   background-color: black;
-  height: 26.66667px;
-  width: 26.66667px;
+  height: 15px;
+  width: 15px;
   color: white;
   border: 1px solid grey;
   text-align: center;
   position: relative;
+  font-size: 3;
 }
 
 .game-window {
@@ -15,9 +16,10 @@
 #character {
   position: absolute;
   z-index: 2;
-  height: 26.66667px;
-  width: 26.66667px;
+  height: 15px;
+  width: 15px;
   text-align: center;
+  line-height: 0.84;
   font-size: 1.3em;
   top: 0;
   bottom: 0;
