--- a/main.scss
+++ b/main.scss
@@ -1,21 +1,34 @@
 $tileBaseColor: black;
-$gameHeight: 900px;
+$gameHeight: 800px;
 $tileWidth: $gameHeight/60;
-$tileHeight: $gameHeight/60;
+$tileHeight: $gameHeight/40*1.1;
 
 .tile {
+	
 	background-color: $tileBaseColor;
-	height: $tileHeight;
-	width: $tileWidth;
-	color: white;
-	border: 1px solid grey;
-	text-align: center;
+	color: #999;
+	border: 1px solid #666;
 	position: relative;
-	font-size: 3;
+	width: $tileWidth;
+	height: $tileHeight;
+	// margin: none;
+	// padding: none;
+	
+	// font-size: 3;
 }
 
-.game-window {
-	height: 1000px;
+// .tile div {
+// 	display: block;
+// 	text-align: center;
+// 	overflow: hidden;
+// 	margin: none;
+// 	padding: none;
+// }
+
+#game-window {
+	height: $gameHeight;
+	margin: 2%;
+
 }
 
 #character {
@@ -25,10 +38,70 @@ $tileHeight: $gameHeight/60;
 	width: $tileWidth;
 	text-align: center;
 	line-height: 0.84;
-	font-size: 1.3em;
+	font-size: 2.2em;
 	top :0;
 	bottom: 0;
 	right: 0;
 	left: 0;
 	margin: auto;
 }
+
+.wall {
+	color: #aaa;
+	padding-left: 0.09em;
+}
+
+.dot {
+	color: #fff;
+	padding-left: 0.25em;
+	padding-bottom: 2
+
+	em;
+}
+
+// .icon-dot, .icon-hash{
+// 	font-size: 0.5em;
+// 	text-align: left;
+// 	margin-right: none;
+// 	margin-left: none;
+
+
+// }
+
+// .icon-hash {
+// 	color: grey;
+// 	// font-size: 0.8em;
+// 	// text-align: right;
+
+// }
+
+// #character:before, #character:before {
+//   font-family: "fontello";
+//   font-style: normal;
+//   font-weight: normal;
+//   speak: none;
+ 
+//   display: inline-block;
+//   text-decoration: inherit;
+//   width: 1em;
+//   margin-right: .2em;
+//   text-align: center;
+//   /* opacity: .8; */
+ 
+//   /* For safety - reset parent styles, that can break glyph codes*/
+//   font-variant: normal;
+//   text-transform: none;
+     
+//   /* fix buttons height, for twitter bootstrap */
+//   line-height: 1em;
+ 
+//   /* Animation center compensation - margins should be symmetric */
+//   /* remove if not needed */
+//   margin-left: .2em;
+ 
+//   /* you can be more comfortable with increased icons size */
+//   /* font-size: 120%; */
+ 
+//   /* Uncomment for 3D effect */
+//   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+// }
