--- a/main.css
+++ b/main.css
@@ -20,8 +20,18 @@ td {
 .tile {
   width: 16.66667px;
   height: 27.5px;
+  box-sizing: border-box;
   overflow: hidden;
   position: relative;
+}
+
+#messages {
+  height: 120px;
+  width: 1000px;
+  background-color: #eee;
+  color: black;
+  overflow-y: scroll;
+  margin: 2% 0 2% 2%;
 }
 
 .character {
@@ -41,11 +51,9 @@ td {
   padding-left: 0.10em;
 }
 
-#messages {
-  height: 120px;
-  width: 1000px;
-  background-color: #eee;
-  color: black;
-  overflow-y: scroll;
-  margin: 2% 0 2% 2%;
+.rat {
+  font-size: 1.8em;
+  padding-left: 0.07em;
+  line-height: 0.9;
+  color: #996600;
 }
