--- a/main.scss
+++ b/main.scss
@@ -32,11 +32,25 @@ td {
 .tile {
 	width: $tileWidth;
 	height: $tileHeight;
+	box-sizing: border-box;
 	overflow: hidden;
 	position: relative;
 }
 
 
+#messages {
+	// display: block;
+	height: 120px;
+	width: $gameHeight;
+	background-color: #eee;
+	color: black;
+	overflow-y: scroll;
+	margin: 2% 0 2% 2%;
+
+}
+
+
+// specific tiles
 .character {
 	z-index: 2;
 	// padding-left: 0.10em;
@@ -58,13 +72,9 @@ td {
 
 }
 
-#messages {
-	// display: block;
-	height: 120px;
-	width: $gameHeight;
-	background-color: #eee;
-	color: black;
-	overflow-y: scroll;
-	margin: 2% 0 2% 2%;
-
+.rat {
+	font-size: 1.8em;
+	padding-left: 0.07em;
+	line-height: 0.9;
+	color: #996600
 }
