--- a/main.scss
+++ b/main.scss
@@ -62,7 +62,7 @@ td {
 }
 
 .wall {
-	color: #aaa;
+	color: #777;
 	padding-left: 0.05em;
 	font-size: 1.7em;
 }
@@ -82,9 +82,10 @@ td {
 }
 
 .door {
-	font-size: 1.8em;
+	font-size: 1.6em;
 	// line-height: 1.4;
 	// padding-bottom: 2em;
 	padding-left: 0.03em;
+	color: brown;
 
 }
