--- a/main.css
+++ b/main.css
@@ -29,9 +29,7 @@ td {
 .tile {
   width: 16.66667px;
   height: 27.5px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  overflow: hidden;
+  position: relative;
 }
 
 .hidden {
@@ -66,4 +64,17 @@ td {
   font-size: 1.6em;
   padding-left: 0.03em;
   color: brown;
+}
+
+.text-popup {
+  width: 5%;
+  font-size: 1.4em;
+  position: absolute;
+  z-index: 2;
+  background-color: black;
+}
+
+.close-popup {
+  color: blue;
+  background-color: white;
 }
