--- a/main.css
+++ b/main.css
@@ -1,6 +1,16 @@
+body {
+  margin: 2%;
+}
+
 #game-window {
   height: 1000px;
-  margin: 2%;
+}
+
+#HUD {
+  display: inline-block;
+  margin-bottom: 1%;
+  background-color: #eee;
+  height: 5%;
 }
 
 #messages {
@@ -9,7 +19,7 @@
   background-color: #eee;
   color: black;
   overflow-y: scroll;
-  margin: 0.5% 0 0 2%;
+  margin-bottom: 1%;
 }
 
 table {
