--- a/main.scss
+++ b/main.scss
@@ -61,7 +61,7 @@ td {
 }
 
 .hidden {
-	display: none;
+	// display: none;
 }
 
 // specific tiles
@@ -100,6 +100,10 @@ td {
 	padding-left: 0.03em;
 	color: brown;
 
+}
+
+.upstairs, .downstairs {
+	font-size: 1.4em;
 }
 
 // click to inspect popup
